--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }}
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ github.sha }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ github.sha }}
