--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/ssjk .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/ssj:$(date +%Y%m%d%H%M%S)k .
           docker push ${{ secrets.DOCKER_USERNAME }}/ssjk
