--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/ssjk:$(date +%Y%m%d%H%M%S) .
-          docker push ${{ secrets.DOCKER_USERNAME }}/ssjk:$(date +%Y%m%d%H%M%S)
+      # 设置环境变量以包含时间戳  
+      - name: Get current date  
+        run: echo "BUILD_DATE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV  
+  
+      # 构建并推送 Docker 镜像  
+      - name: Build and push Docker images  
+        uses: docker/build-push-action@v3  
+        with:  
+          context: .  
+          push: true  
+          tags: |  
+            ${{ secrets.DOCKER_USERNAME }}/ssjk:latest  
+            ${{ secrets.DOCKER_USERNAME }}/ssjk:${{ env.BUILD_DATE }}
