--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up QEMU  
+        # QEMU 是用于在一种架构上模拟另一种架构的工具  
+        # Docker BuildKit 使用 QEMU 来实现跨平台构建  
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx  
+        uses: docker/setup-buildx-action@v2 
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -27,7 +35,8 @@ jobs:
       - name: Build and push Docker images  
         uses: docker/build-push-action@v3  
         with:  
-          context: .  
+          context: .
+          platforms: linux/amd64,linux/arm64
           push: true  
           tags: |  
             ${{ secrets.DOCKER_USERNAME }}/ssjk:latest  
