--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,8 @@ jobs:
 
       # 设置环境变量以包含时间戳  
       - name: Get current date  
-        run: echo "BUILD_DATE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV  
+        run: export TZ='Asia/Shanghai'
+             echo "BUILD_DATE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV  
   
       # 构建并推送 Docker 镜像  
       - name: Build and push Docker images  
